2010-03-24  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* src/calendar/lightning/content/messenger-overlay-sidebar.js
	(gInvitationsCalendarManagerObserver): enhanced with interface
	calIObserver so that the new "showInvitations" parameter is taken
	directly into account (via notification).

	* src/calendar/base/content/agenda-listbox.js
	(agendaListbox.refreshCalendarQuery): hacked to refresh items only
	from calendars having the property "showInTodayPane" set to true.
	(agendaListbox.calendarObserver.onPropertyChanged): take
	"showInTodayPane" into account and ignore "disable" since the
	latter is useless because onCalendarAdded and onCalendarRemoved
	already take care of its purpose.

	* src/calendar/base/content/calendar-unifinder.js
	(unifinderObserve.onCalendarAdded)
	(unifinderObserve.onCalendarRemoved): check whether the unifinder
	is visible before executing any update, in order to avoid useless
	calls of getItems().

	* src/calendar/base/content/calendar-multiday-view.xml: same as below.

	* src/calendar/base/content/calendar-month-view.xml
	(calendar-month-view.isActiveView): new method that determines
	whether the current instance is the active view.
	(calendar-month-view.refresh, calendar-month-view.onCalendarAdded)
	(calendar-month-view.onCalendarRemoved): make use of the new
	method above to reduce the amount of invocations of getItems.

	* src/calendar/base/content/calendar-minimonth-busy.js
	(minimonthBusyListener.onCalendarAdded)
	(minimonthBusyListener.onCalendarRemoved): we now return directly, to
	avoid updating the minimonth with costly getItems.
	(minimonthBusyListener.onAddItem)
	(minimonthBusyListener.onDeleteItem)
	(minimonthBusyListener.onModifyItem): we also return directly
	here, to avoid a UI inconsistency where any change to an event
	would cause the boldening of the referred dates.

2010-03-23  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* src/calendar/base/src/calIcsParser.js
	We fallback to ISO8859-1 when UTF-8 fails